--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "fumadocs-mdx": "14.0.4",
     "fumadocs-ui": "16.2.0",
     "lucide-react": "^0.552.0",
+    "motion": "^12.23.24",
     "next": "16.0.1",
     "ogl": "^1.0.11",
     "react": "^19.2.0",
