--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "motion": "^12.23.25",
     "next": "16.0.7",
     "ogl": "^1.0.11",
+    "posthog-js": "^1.302.2",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
     "tailwind-merge": "^3.4.0"
